Fixing Version number

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "raphievila/xtags",
-	"version": "dev-master",
+	"version": "1.0.0",
 	"source": {
 		"url": "git://github.com/raphievila/xtags.git",
 		"type": "git",
