--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
 	},
 	"autoload": {
 		"psr-4": {
-			"xTags\\xTags": "src/",
+			"xTags\\": "src/",
 			"Vendor\\Namespace\\": ""
 		},
 		"classmap": ["src/"]
