changing minimu-stability to dev
having conflict installing with current minimum stability

--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,6 @@
 	"config": {
 		"github-protocols": ["git", "https", "http"]
 	},
-	"minimum-stability": "stable"
+	"minimum-stability": "dev"
 }
 
